--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kickstart-js",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Kickstart/CrowdCoin App based on the udemy.com course Ethereum and Solidity: The Complete Developer's Guide",
   "private": true,
   "scripts": {
@@ -10,30 +10,22 @@
     "lint": "next lint",
     "test": "mocha"
   },
-  "browserslist": [
-    ">0.3%",
-    "not ie 11",
-    "not dead",
-    "not op_mini all"
-  ],
   "dependencies": {
-    "@truffle/hdwallet-provider": "^1.5.1",
-    "dotenv": "^10.0.0",
-    "fs-extra": "^10.0.0",
-    "ganache-cli": "^6.12.2",
-    "mocha": "^9.1.3",
-    "next": "12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
-    "solc": "^0.8.9",
-    "web3": "^1.6.0"
+    "@truffle/hdwallet-provider": "^2.1.7",
+    "dotenv": "^16.0.3",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.2.1",
+    "fs-extra": "^11.1.0",
+    "next": "13.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "solc": "^0.8.19",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.1"
+    "eslint-config-prettier": "^8.6.0",
+    "ganache": "^7.7.5",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.4"
   }
 }
